# gboviz

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp  processor.cpp  processor.h
templates/: data.js  sunburst.html
tests/: test_main.cpp
